--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "feed"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.24.1",
     "chalk": "^1.1.3",
+    "validator": "^5.7.0",
+    "yeoman-generator": "^0.24.1",
     "yosay": "^1.2.0"
   },
   "devDependencies": {
