--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
     "extends": "airbnb",
+    "rules": {
+      "react/require-extension": "off"
+    },
     "plugins": [
         "react",
         "jsx-a11y",
