--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^3.0.1",
     "gulp-nsp": "^2.4.2",
-    "gulp-plumber": "^1.1.0"
+    "gulp-plumber": "^1.1.0",
+    "yeoman-assert": "^2.0.0",
+    "yeoman-test": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.1.1",
@@ -38,9 +40,7 @@
     "eslint-config-xo-space": "^0.14.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.2",
-    "yeoman-assert": "^2.0.0",
-    "yeoman-test": "^1.0.0"
+    "eslint-plugin-react": "^6.2.2"
   },
   "eslintConfig": {
     "extends": "xo-space",
