--- a/package.json
+++ b/package.json
@@ -22,7 +22,15 @@
     "chalk": "^1.1.3",
     "validator": "^5.7.0",
     "yeoman-generator": "^0.24.1",
-    "yosay": "^1.2.0",
+    "yosay": "^1.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.1.1",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-config-xo-space": "^0.14.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.2.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.0.0",
@@ -33,14 +41,6 @@
     "gulp-plumber": "^1.1.0",
     "yeoman-assert": "^2.0.0",
     "yeoman-test": "^1.0.0"
-  },
-  "devDependencies": {
-    "eslint": "^3.1.1",
-    "eslint-config-airbnb": "^11.1.0",
-    "eslint-config-xo-space": "^0.14.0",
-    "eslint-plugin-import": "^1.15.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.2"
   },
   "eslintConfig": {
     "extends": "xo-space",
